fixed way of forward reference detection to support literal constant (BUG#8025)